k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodtracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Force HTTPS later in Step 6
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moodtracker-backend-svc
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moodtracker-frontend-svc
            port:
              number: 80
